# keyHub

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  deep_test.py  docker-compose.yml  pyproject.toml
keyhub/: __init__.py  audit.py  auth.py  auto_lock.py  backup.py  cli.py  config.py  crypto.py  db.py  importers.py  main.py  metrics.py  models.py  notify.py  ratelimit.py  rotation.py  runtime.py  schemas.py  store.py  structured_logging.py
keyhub/api/: __init__.py  audit.py  auth.py  credentials.py  events.py  llm.py  rotation.py  system.py  v1.py
keyhub/llm/: aliases.py  balancer.py  cache.py  keylimit.py  latency_stats.py  providers.py  proxy.py  tracker.py
keyhub/web/: __init__.py
keyhub/web/static/: app.js  manifest.json  style.css
keyhub/web/templates/: init.html  panel.html  unlock.html
scripts/: pre-commit-hook.sh
tests/: conftest.py  smoke_test.py  test_security.py
