[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyhub"
version = "0.1.0"
description = "Personal credential & LLM API key vault with proxy, load balancing and usage tracking"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "KeyHub" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
keyhub = "keyhub.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["keyhub*"]

[tool.setuptools.package-data]
keyhub = ["web/templates/*.html", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
